--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body {
   right: 0;
   bottom: 0;
   transform: translateY(100%);
-  background: rgb(0, 0, 0);
-  color: #ffffff;
+  background: rgba(255, 255, 255, 1);
+  color: #000000;
   padding: 0.75rem 1rem;
   font-weight: 600;
   text-align: center;
