--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap');
 /* Global site styles */
 :root {
-  --site-gradient: linear-gradient(180deg, #ffffff 0%, #3497df 100%);
+  --site-gradient: linear-gradient(180deg, #95cbda 0%, #1073b9 100%);
 }
 html, body {
   height: 100%;
@@ -11,8 +12,12 @@ html, body {
   margin: 0;
 }
 body {
-  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+  font-family: 'Oswald', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
   color: #000000; 
+}
+
+.font.nike {
+  font-family: 'Oswald', sans-serif;
 }
 
 .main-flex {
